[package]
name = "rust-quantlib"
description = "QuantLib in Rust"
version = "0.1.0"
edition = "2021"

# --------------------------------------------------------------------------------------------------

[dependencies]
chrono = { version = "0.4", features = ["serde"] }

[profile.release]
debug = 1

